# carnet

./: .gitignore  AUDIT-backend.md  AUDIT.md  CLAUDE.md  DESIGN.md  README.md  TODO.md  package-lock.json  package.json  tsconfig.base.json
.agent_native/: agent_roadmap.md
.claude/PRPs/plans/: audio-and-arbitrary-file-share-types.plan.md  backlog-audit-2026-06-13.md  desktop-fate.plan.md  f2-location-status-handoff.md  (+21 more)
.github/workflows/: ci.yml  release.yml
.reports/: codemap-diff.txt
apps/desktop/: README.md  index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: App.tsx  app.json  eslint.config.mjs  index.js  metro.config.js  package.json  tsconfig.json  vitest.config.ts
docs/: CONTRIBUTING.md  RUNBOOK.md  smoke-test.md  sync-setup.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/prp/: issue-plan-2026-07-07.md
docs/session-handoffs/: 2026-07-04-stage2-b3-b0.md  2026-07-09-stamped-paper-redesign-and-ci.md  2026-07-11-stage2-reconciliation-and-voice-fixes.md  2026-07-12-voice-extraction-ux-fixes-release-migration.md  2026-07-12-voice-failover-fix-and-whisper-removal.md  2026-07-12-voice-policy-b2-fold-and-device-incidents.md  2026-07-14-share-fixes-smoke-tests-pending-sync-design.md  2026-07-16-pending-sync-queue-built-share-contenturi-fix.md  2026-07-17-audit-implemented-vaultfs-four-research-features.md  2026-07-18-lint-gate-linkplus-live-banner.md
patches/: expo-share-intent+5.1.1.patch  expo-speech-recognition+3.1.3.patch
(+282 files in other folders)
