[package]
name = "carnet-desktop"
version = "0.1.0"
description = "Desktop client stub for Carnet"
authors = ["Entrevoix"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "carnet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
